Fix add event overflow

--- a/scss/_event-grid.scss
+++ b/scss/_event-grid.scss
@@ -4,6 +4,7 @@
     width: 90%;
     
     .event-window{
+    	overflow: hidden;
         opacity: 0.9;
         &:hover { opacity: 1.0; }
         background-color: white;
